--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <h2>Get In Touch</h2>
           <h3 class="about-message">I am really interested in the domain of web designing & Developement.<br>So,if you working on a project & if you thing i can help you with something!</h3>
           <p class="contact-message">Just fancy saying hey, then get in touch!</p>
-          <a class="btn" href="mailto:padmanavadas026@email.com">CONTACT ME</a>
+          <a class="btn" href="mailto:padmanavadas026@gmail.com">CONTACT ME</a>
         </div>
       </div>
       
@@ -50,7 +50,7 @@
       <div class="bottom-container">
         <a class="footer-link" href="https://www.linkedin.com/in/padmanava-das-9a68b2257">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/PADMANAVADas16?s=09">Twitter</a>
-        <a class="footer-link" href="mailto:padmanavadas026@email.com">Hire Me</a>
+        <a class="footer-link" href="mailto:padmanavadas026@gmail.com">Hire Me</a>
         <p class="copyright-message">© 2023 Padmanava Das.All rights reserved.</p>
       </div>
       
